# notification-service

./: .env.template  justfile  pyproject.toml
migrations/: env.py
migrations/versions/: 2026_03_09_2039-0a9cb199739f_init.py
src/: main.py
src/core/: config.py  dependencies.py  exceptions.py  logging_config.py
src/db/: __init__.py  db_helper.py
src/db/models/: __init__.py  subscription.py
src/interfaces/api/: routes.py  schemas.py
src/interfaces/grpc/: auth_client.py
src/services/: notification_service.py  rabbitmq_client.py
