[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.3",
    "pydantic-settings>=2.12.0",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "aio-pika>=9.5.8",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]
